--- a/jenkinsfile
+++ b/jenkinsfile
@@ -1,38 +1,36 @@
 pipeline {
-    agent any
-
-    environment {
-        DOCKER_HUB_CREDENTIALS = 'mydockeruser' 
-        DOCKER_IMAGE = 'junaid1976/mygymapp'
-        DOCKER_TAG = 'latest' 
-    }
-
-    stages {
-        stage('Checkout') {
-            steps {
-               
-                git 'https://github.com/Junaid1055/Neogym.git'
-            }
+    agent {
+        docker {
+            label 'docker'
+            image 'docker:latest'
+            args '-v /var/run/docker.sock:/var/run/docker.sock'
         }
-        
-        stage('Build Docker Image') {
+    }
+    stages {
+        stage('Build Image') {
             steps {
+                
+                git 'https://github.com/Junaid1055/Neogym.git'
+                
                 script {
-                    
-                    docker.build("${env.DOCKER_IMAGE}:${env.DOCKER_TAG}")
+                    docker.build('mygymapp') // Set your desired image name
                 }
             }
         }
-        
-        stage('Push Docker Image to Docker Hub') {
+        stage('Push Image to Docker Hub') {
             steps {
-                script {
-                    docker.withRegistry('https://index.docker.io/v1/', env.DOCKER_HUB_CREDENTIALS) {
-                        
-                        docker.image("${env.DOCKER_IMAGE}:${env.DOCKER_TAG}").push()
+               
+                withCredentials([usernamePassword(credentialsId: 'mydockeruser', usernameVariable: 'DOCKERHUB_USERNAME', passwordVariable: 'DOCKERHUB_PASSWORD')]) {
+                    script {
+                        docker.withRegistry('https://index.docker.io/v1/', 'mydockeruser') {
+                            
+                            docker.image('my-nginx-image').push("${env.BUILD_NUMBER}")
+                            docker.image('my-nginx-image').push('latest')
+                        }
                     }
                 }
             }
         }
-    }    
+    }
 }
+
